refactoring + entity graph